# panon

./: .gitignore  .gitmodules  PKGBUILD  README.md  README.org  install.sh  makepackage.sh  run-server.sh  setup.py  test.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
doc/config/: panonrc
example/: client.py  client.qml
kde/: CMakeLists.txt  build.py  install.sh  makepackage.sh  setup.sh  test.sh
kde/plasmoid/: metadata.desktop  metadata.json
kde/translations/: CMakeLists.txt  TRANSLATORS_README  install_translations.sh
kde/translations/po/: plasma_applet_panon de_DE.po  plasma_applet_panon de_DE.pot  plasma_applet_panon.pot  plasma_applet_panon_de_DE.po  plasma_applet_panon_zh_CN.po
panon/: __main__.py  client.py  config.py  convertor.py  decay.py  get_devices.py  get_pa_devices.py  glfft.py  helper.py  logger.py  multiload.py  pulseaudio.py  pulseaudio.py.h  server.py  shortcut.py  singleton.py  source.py  spectrum.py  taskbar.py  visualizer.py  xpanel.py
panon/backend/: beat.py  client.py  convertor.py  get_pa_devices.py  server.py  source.py  spectrum.py
panon/effect/: build_shader_source.py  get_effect_list.py  helper.py  read_file.py
panon/glsl/: __init__.py  fft.glsl  frag.glsl  frag2.glsl  spectrum.glsl  (+2 more)
plasmoid/: metadata.desktop
test/: README.MD  dependency.py  dependency.qml  dependency.sh  readme  test1.py  test1.sh  test_QtMultimedia.py  test_pyaudio.py  test_python-soundcard.py  test_python-sounddevice.py  test_websocket.sh  test_websocket_server.py
translations/: README  TRANSLATORS_README  extract-messages.sh
(+149 files in other folders)
